force-app/main/default/objects/Kit_Instalacao__c/Kit_Instalacao__c.object-meta.xml
<CustomObject>
    <label>Kit Instalação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nºdo Kit Instalacao</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Instalações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>