force-app/main/default/objects/Kit_Instalacao__c/fields/AniversarioLinha__c.field-meta.xml
<CustomField>
    <fullName>AniversarioLinha__c</fullName>
    <description>Aniversário da linha para o Pedido de Compra/Venda</description>
    <label>Aniversário da Linha</label>
    <type>Date</type>
</CustomField>