force-app/main/default/objects/Kit_Instalacao__c/fields/CodigoImposto__c.field-meta.xml
<CustomField>
    <fullName>CodigoImposto__c</fullName>
    <label>Código de Imposto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrialização</fullName>
            </value>
            <value>
                <fullName>Compra Comercial</fullName>
            </value>
            <value>
                <fullName>Transferência</fullName>
            </value>
            <value>
                <fullName>Conserto ou reparo</fullName>
            </value>
            <value>
                <fullName>Compra KIT Weg</fullName>
            </value>
            <value>
                <fullName>Compra Ativo Fixo</fullName>
            </value>
            <value>
                <fullName>Venda Prod. Própria</fullName>
            </value>
            <value>
                <fullName>Venda Adquirida Terc</fullName>
            </value>
            <value>
                <fullName>Demonstração</fullName>
            </value>
            <value>
                <fullName>Compra Consumo</fullName>
            </value>
            <value>
                <fullName>Serv. Prestado/Venda</fullName>
            </value>
            <value>
                <fullName>Agua e Esgoto</fullName>
            </value>
            <value>
                <fullName>Aluguel de Imoveis</fullName>
            </value>
            <value>
                <fullName>Comissao Consultores</fullName>
            </value>
            <value>
                <fullName>Compra Comercial ST</fullName>
            </value>
            <value>
                <fullName>Compra NF Fut. Remes</fullName>
            </value>
            <value>
                <fullName>Compra NF Futura</fullName>
            </value>
            <value>
                <fullName>Compra de Brindes</fullName>
            </value>
            <value>
                <fullName>Copa e Cozinha</fullName>
            </value>
            <value>
                <fullName>Cursos e Treinamento</fullName>
            </value>
            <value>
                <fullName>Desp Aprendiz/Estagi</fullName>
            </value>
            <value>
                <fullName>Desp. Contratuais</fullName>
            </value>
            <value>
                <fullName>Desp. c/ Sistemas</fullName>
            </value>
            <value>
                <fullName>Desp. c/ Viagem</fullName>
            </value>
            <value>
                <fullName>Energia Eletrica</fullName>
            </value>
            <value>
                <fullName>Eventos e Confratern</fullName>
            </value>
            <value>
                <fullName>Feiras e Exposicoes</fullName>
            </value>
            <value>
                <fullName>Ferramentas</fullName>
            </value>
            <value>
                <fullName>Fretes s/ Vendas</fullName>
            </value>
            <value>
                <fullName>Impostos Estaduais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>