force-app/main/default/objects/Kit_Instalacao__c/fields/Nome_da_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Oportunidade__c</fullName>
    <label>Nome da Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Kit Instalacao</relationshipLabel>
    <relationshipName>Kit_Instalacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>