force-app/main/default/objects/Kit_Instalacao__c/fields/NumeroItemSAP__c.field-meta.xml
<CustomField>
    <fullName>NumeroItemSAP__c</fullName>
    <label>Número do Item no SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>