force-app/main/default/objects/Kit_Instalacao__c/fields/Recorrencia__c.field-meta.xml
<CustomField>
    <fullName>Recorrencia__c</fullName>
    <description>Recorrência para o Pedido de Compra/Venda</description>
    <label>Recorrência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indefinida</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Bimestral</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>