force-app/main/default/objects/Kit_Instalacao__c/fields/StatusBodyIntegracaoSAP__c.field-meta.xml
<CustomField>
    <fullName>StatusBodyIntegracaoSAP__c</fullName>
    <label>Status Body Integracao SAP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>