force-app/main/default/objects/Kit_Instalacao__c/fields/TipoFaturamento__c.field-meta.xml
<CustomField>
    <fullName>TipoFaturamento__c</fullName>
    <description>Tipo do faturamento para o Pedido de Compra/Venda</description>
    <label>Tipo de Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
            </value>
            <value>
                <fullName>Medição</fullName>
            </value>
            <value>
                <fullName>Parcelado</fullName>
            </value>
            <value>
                <fullName>Recorrente</fullName>
            </value>
            <value>
                <fullName>Calculado</fullName>
            </value>
            <value>
                <fullName>Parcelado Medido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>