force-app/main/default/objects/Kit_Instalacao__c/fields/TipoMedicao__c.field-meta.xml
<CustomField>
    <fullName>TipoMedicao__c</fullName>
    <description>Tipo da medição para Pedido de Compra/Venda</description>
    <label>Tipo de Medição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor</fullName>
            </value>
            <value>
                <fullName>Percentual</fullName>
            </value>
            <value>
                <fullName>Quantidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>