force-app/main/default/objects/Kit_Instalacao__c/fields/UnidadeMedidaLocacao__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedidaLocacao__c</fullName>
    <description>Valor da unidade de medida da locação para Pedido de Compra/Venda</description>
    <label>Unidade de Medida da Locação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Metro Quadrados</fullName>
            </value>
            <value>
                <fullName>Kilograma</fullName>
            </value>
            <value>
                <fullName>Segundos</fullName>
            </value>
            <value>
                <fullName>Horas</fullName>
            </value>
            <value>
                <fullName>Dia</fullName>
            </value>
            <value>
                <fullName>Unidade</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>