force-app/main/default/objects/Kit_Instalacao__c/fields/ValorKit__c.field-meta.xml
<CustomField>
    <fullName>ValorKit__c</fullName>
    <label>Valor do Kit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>