force-app/main/default/objects/Kit_Instalacao__c/fields/VencimentoBase__c.field-meta.xml
<CustomField>
    <fullName>VencimentoBase__c</fullName>
    <description>Vencimento base para o Pedido de Compra/Venda</description>
    <label>Vencimento Base</label>
    <type>Date</type>
</CustomField>