force-app/main/default/objects/Kit_Instalacao__c/listViews/TodosKitsInstalacoes.listView-meta.xml
<ListView>
    <fullName>TodosKitsInstalacoes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Kits de Instalações</label>
</ListView>